--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ i {
   content: "";
   display: block;
   position: absolute;
-  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e), url("../../src/img/bg.svg");
+  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e), url("../img/bg.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 0;
